style: fixing width of tags so that no overflow occur.

--- a/src/components/Mentors/MentorAbout/MentorAbout.module.scss
+++ b/src/components/Mentors/MentorAbout/MentorAbout.module.scss
@@ -50,7 +50,10 @@
                 border: 1.35px solid #FB723D;
                 box-shadow: 0px 4px 4px 0px #00000040;
                 border-radius: 10px;
-                width: 130px;
+                min-width: 130px;
+                padding-left: 25px;
+                padding-right: 25px;
+                width: fit-content;
                 height: 30px;
                 text-align: center;
                 font-size: 13px;
@@ -85,7 +88,10 @@
                 background-color:#FB723D;
                 color: #fff;
                 border-radius: 10px;
-                width: 130px;
+                min-width: 130px;
+                padding-left: 25px;
+                padding-right: 25px;
+                width: fit-content;
                 height: 30px;
                 text-align: center;
                 font-size: 13px;
@@ -250,7 +256,10 @@
     
                 .industries {
                     border: 1px solid #FB723D;
-                    width: 128px;
+                    min-width: 128px;
+                    width: fit-content;
+                    padding-left: 20px;
+                    padding-right: 20px;
                     height: 28px;
                     font-size: 12.5px;
                     padding-top: 4.5px;
@@ -275,7 +284,10 @@
                 
                 .area {
                     border: 1px solid #FB723D;
-                    width: 128px;
+                    min-width: 128px;
+                    width: fit-content;
+                    padding-left: 20px;
+                    padding-right: 20px;
                     height: 28px;
                     font-size: 12.5px;
                     padding-top: 4.5px;
